# skyscript-cef

./: CMakeLists.txt  README.md  build_platforms.sh  toolchain-mac.cmake  toolchain-win-native.cmake
.github/workflows/: build.yaml
SkyScript.xcodeproj/: project.pbxproj
SkyScript.xcodeproj/xcshareddata/xcschemes/: SkyScript.xcscheme
src/: browser.cpp  browser.h  main.cpp
src/include/: appstate.cpp  appstate.h  config.h
src/include/components/: button.cpp  image.cpp  image.h  notification.cpp
src/include/components/browser/: browser_handler.cpp  browser_handler.h
src/include/utils/: dataref.cpp  drawing.cpp
